--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>I am on scholarship as a student-athlete competing at the highest American Football College Football Level in Mexico. Last year I had the most yards per catch in the Nation. </p>
-        <p class="mb-0">My favorite hobbies are board sports I am an avid Snowboarder and Wakeboarder, improving at Skating and Surfing. I enjoy the thrill of doing extreme sports, trying new tricks and competing.</p>
+        <p> My favorite hobbies are board sports I am an avid Snowboarder and Wakeboarder, improving at Skating and Surfing. I enjoy the thrill of doing extreme sports, trying new tricks and competing.</p>
+        <p class="mb-0">I am on scholarship as a student-athlete competing at the highest American Football College Football Level in Mexico. Last year I had the most yards per catch in the Nation.</p>
       </div>
     </section>
 
