Update USYD info

--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
+         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+             <div class="resume-content">
+                 <h3 class="mb-0">The University of Sydney</h3>
+                 <div class="subheading mb-3">Exchange Student</div>
+                 <div>Engineering / Business</div>
+                 <p>Units of Study: Manufacturing Engineering / Quantitative Business Analysis / Business Information Systems / Ethics</p>
+             </div>
+             <div class="resume-date text-md-right">
+                 <span class="text-secondary">Jan 2020 - Jun 2020</span>
+             </div>
+         </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Tecnologico de Monterrey, Campus Monterrey</h3>
