--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Liam
           <span class="text-primary">Loftus</span>
         </h1>
-        <div class="subheading mb-5">413 Harris Street · Ultimo, NSW 2007 · (+61) 434 583 493 ·
+        <div class="subheading mb-5">Av. Santa Fe 596 Dep. 709 · Mexico City 05348 · (+52) 55 4350 1528 ·
           <a href="mailto:liamloft8@gmail.com">liamloft8@gmail.com</a>
         </div>
         <p class="lead mb-5">"When life gives you lemons, make lemonade." </p>
