--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
           <div class="resume-content">
             <h3 class="mb-0">Executive Assistant</h3>
             <div class="subheading mb-3">Uría S.A. de C.V.</div>
+            <p>Retro-Fitted a 1980’s ELOX-EDM machine with Fanuc 200c control allowing it to receive NC code from a computer and not relying solely on punched tape, tape reader and puncher. </p>
             <p>Enhanced potential client outreach by introducing the factory and its products to the digital marketing environment.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-secondary">May 2019 - Aug 2019</span>
+            <span class="text-secondary">Jun 2020 - Aug 2020</span>
           </div>
         </div>
 
@@ -182,6 +183,10 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-code"></i>
+                    ABB Robot Studio
+                </li>
+                <li>
+                    <i class="fa-li fa fa-code"></i>
                     Arduino
                 </li>
                 <li>
@@ -224,7 +229,7 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p> My favorite hobbies are board sports I am an avid Snowboarder and Wakeboarder, improving at Skating and Surfing. I enjoy the thrill of doing extreme sports, trying new tricks and competing.</p>
-        <p class="mb-0">I am on scholarship as a student-athlete competing at the highest American Football College Football Level in Mexico. Last year I had the most yards per catch in the Nation.</p>
+        <p class="mb-0">I earned a scholarship as a student-athlete competing at the highest College American Football Level in Mexico. I am a Wide Receiver and last season I had the most yards per catch in the Nation.</p>
       </div>
     </section>
 
