--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Av. Santa Fe 596 Dep. 709 · Mexico City 05348 · (+52) 55 4350 1528 ·
           <a href="mailto:liamloft8@gmail.com">liamloft8@gmail.com</a>
         </div>
-        <p class="lead mb-5">"When life gives you lemons, make lemonade." </p>
+          <p class="lead mb-5"> <!-- "QUOTE" --> </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/liamloftus">
             <i class="fab fa-linkedin-in"></i>
