--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Waiter/Bartender</h3>
+            <h3 class="mb-0">Waiter</h3>
             <div class="subheading mb-3">Planar Restaurant</div>
             <p>Met customer needs and requirements to ensure satisfaction. Made recommendations, answered questions and shared additional information with restaurant patrons.</p>
           </div>
