LA & Lawrence Equiment Update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Liam
           <span class="text-primary">Loftus</span>
         </h1>
-        <div class="subheading mb-5">Av. Santa Fe 596 Dep. 709 · Mexico City 05348 · (+52) 55 4350 1528 ·
+        <div class="subheading mb-5">Los Angeles, California <br>
           <a href="mailto:liamloft8@gmail.com">liamloft8@gmail.com</a>
         </div>
           <p class="lead mb-5"> <!-- "QUOTE" --> </p>
@@ -92,13 +92,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Automation Engineer</h3>
+            <div class="subheading mb-3">Lawrence Equipment </div>
+            <p>Troubleshoot automated flatbread production lines running around the world oftenly flying out to solve problems on site. Our custumers run production round the clock therefore any down time translates to lost revenue. </p>
+            <p>Understand and Identify all possible causes of failure. Lines have pneumatic, hydraulic and electrical systems controlled through several PLCs. Also, one must be familiar with the quality control computer vision and safety systems as they are an essential to the lines. </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-secondary">Feb 2021 - Current</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Executive Assistant</h3>
             <div class="subheading mb-3">Uría S.A. de C.V.</div>
             <p>Retro-Fitted a 1980’s ELOX-EDM machine with Fanuc 200c control allowing it to receive NC code from a computer and not relying solely on punched tape, tape reader and puncher. </p>
             <p>Enhanced potential client outreach by introducing the factory and its products to the digital marketing environment.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-secondary">Jun 2020 - Aug 2020</span>
+            <span class="text-secondary">Jun 2020 - Feb 2021</span>
           </div>
         </div>
 
