--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Automation Engineer</h3>
+            <h3 class="mb-0">Automation Project Manager</h3>
             <div class="subheading mb-3">Lawrence Equipment </div>
-            <p>Troubleshoot automated flatbread production lines running around the world oftenly flying out to solve problems on site. Our custumers run production round the clock therefore any down time translates to lost revenue. </p>
-            <p>Understand and Identify all possible causes of failure. Lines have pneumatic, hydraulic and electrical systems controlled through several PLCs. Also, one must be familiar with the quality control computer vision and safety systems as they are an essential to the lines. </p>
+            <p>Administered installation and start-up of automated flatbread production lines running around the world often flying out to solve problems on site at the customer’s facilities.  </p>
+            <p>Production lines run pneumatic, hydraulic, electrical, and computer vision for quality control systems controlled through Allen Bradley PLCs.  </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-secondary">Feb 2021 - Current</span>
@@ -104,10 +104,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Executive Assistant</h3>
+            <h3 class="mb-0">General Manager</h3>
             <div class="subheading mb-3">Uría S.A. de C.V.</div>
-            <p>Retro-Fitted a 1980’s ELOX-EDM machine with Fanuc 200c control allowing it to receive NC code from a computer and not relying solely on punched tape, tape reader and puncher. </p>
-            <p>Enhanced potential client outreach by introducing the factory and its products to the digital marketing environment.</p>
+            <p>Retro-Fitted a 1980's ELOX-Wire EDM machine with Fanuc 200c control allowing it to receive NC code from a USB and not relying solely on punched tape, tape reader and puncher. </p>
+            <p>Implemented CAD CAM (Mastercam) software to design and create parts (mainly die sets) to machine with our retro-fitted Wire EDM machine. Taught personnel how to use a computer, draft with Mastercam and extract the post-processed NC code.</p>
+            <p>Developed uria’s online marketplace stores and listings on Amazon and Mercado Libre. Photographed and enhanced pictures to create the listings. Optimized our listings to become the bestselling products on both marketplaces.</p>
+            <p>Sold uria’s product line to 1 restaurant supply store in Monterrey and 2 hardware supply chains in Mexico City.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-secondary">Jun 2020 - Feb 2021</span>
@@ -241,7 +243,7 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p> My favorite hobbies are board sports I am an avid Snowboarder and Wakeboarder, improving at Skating and Surfing. I enjoy the thrill of doing extreme sports, trying new tricks and competing.</p>
-        <p class="mb-0">I earned a scholarship as a student-athlete competing at the highest College American Football Level in Mexico. I am a Wide Receiver and last season I had the most yards per catch in the Nation.</p>
+        <p class="mb-0">I earned a scholarship as a student-athlete competing at the highest College American Football Level in Mexico. I am a Wide Receiver and the 2019 season I had the most yards per catch in the Nation.</p>
       </div>
     </section>
 
@@ -253,6 +255,10 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - Borregos Salvajes National Championship 2019</li>          
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
            Highest GPA for Student Athletes 2017</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
@@ -262,12 +268,8 @@
             Tec (AT) Automation Contest, MediRobot</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - Borregos Salvajes National Championship 2019</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
             3<sup>rd</sup>
-            Place - World Under 19 American Football Championship, Rep. Mexico in Harbin CHINA</li>
+            Place - World Under 19 American Football Championship, Representing Mexico in Harbin, China</li>
       </div>
     </section>
 
