Automation Project Engineer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Automation Project Manager</h3>
+            <h3 class="mb-0">Automation Project Engineer</h3>
             <div class="subheading mb-3">Lawrence Equipment </div>
             <p>Administered installation and start-up of automated flatbread production lines running around the world often flying out to solve problems on site at the customer’s facilities.  </p>
             <p>Production lines run pneumatic, hydraulic, electrical, and computer vision for quality control systems controlled through Allen Bradley PLCs.  </p>
