updated lawrence work experience

--- a/index.html
+++ b/index.html
@@ -92,10 +92,13 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Automation Project Engineer</h3>
+            <h3 class="mb-0">Mechatronics Project Engineer</h3>
             <div class="subheading mb-3">Lawrence Equipment </div>
-            <p>Administered installation and start-up of automated flatbread production lines running around the world often flying out to solve problems on site at the customer’s facilities.  </p>
-            <p>Production lines run pneumatic, hydraulic, electrical, and computer vision for quality control systems controlled through Allen Bradley PLCs.  </p>
+            <p>Install and troubleshoot Industrial Automated Flatbread (Corn & Flour) & Chip Fryer Production Lines.</p>
+            <p>Liaise with the customer’s engineers and project managers to understand production line requirements and engineer solutions to improve operational safety and reduce waste to under 3%.</p>
+            <p>Design brackets, parts, and assemblies using Inventor CAD and Vault PDM software. Manufacture parts using SigmaNest software and export CNC code to laser and waterjet machines to form sheet metal with press breaks.</p>
+            <p>Build and troubleshoot control panels containing contactors, relays, optocouplers, circuit breakers, motor overloads, and AC motor drives. </p>
+            <p>Mechanical design and hands-on experience using conveyors, gears, sprockets, pulleys, timing belts, chains, bearings, bushings, elevators, shafts, transmission, and fasteners.</p> 
           </div>
           <div class="resume-date text-md-right">
             <span class="text-secondary">Feb 2021 - Current</span>
