--- a/index.html
+++ b/index.html
@@ -92,6 +92,43 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Embedded Software Engineer II</h3>
+            <div class="subheading mb-3">Rivian </div>
+            <p>Lead Software Engineer for Rivian’s Isolation Monitoring Device board</p>
+            <p>OCPP 2.0.1, Billing.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-secondary">Jun 2023 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Embedded Software Engineer</h3>
+            <div class="subheading mb-3">Rivian </div>
+            <p>Develop software for Rivian’s DCFC (Direct Current Fast Charging System).</p>
+            <p>C++, Docker, Jenkins, Qt, Git, BitBucket, GitLab, Linux, Mender.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-secondary">Aug 2022 - Jun 2023</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Test Automation Engineer</h3>
+            <div class="subheading mb-3">Rivian </div>
+            <p>Designed and engineered 5 different "ECU Flashing Stations" capable of simultaneously loading the latest firmware onto four ECU's at a time.</p>
+            <p>Flashing Stations are installed at the Contract Manufacturer's production line.</p>
+            <p>Work with ECUs end of line tester hardware (off the shelve and Rivian designed). Troubleshoot and debug test sequences and scripts.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-secondary">Feb 2022 - Aug 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Mechatronics Project Engineer</h3>
             <div class="subheading mb-3">Lawrence Equipment </div>
             <p>Install and troubleshoot Industrial Automated Flatbread (Corn & Flour) & Chip Fryer Production Lines.</p>
